# moyu-words

./: .gitignore  README.md  index.html  overlay.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  overlay.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  vocab.rs
src-tauri/src/commands/: books_fn.rs  builtin_fn.rs  mod.rs  overlay_fn.rs  plans_fn.rs  settings_fn.rs  unit_words_fn.rs  units_fn.rs  words_fn.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/vocab/: builtin.rs  parser.rs
src/components/Archive/: ArchiveTab.tsx
src/components/Layout/: Header.tsx  Sidebar.tsx
src/components/Overlay/: ShatterCanvas.tsx  WordDisplay.tsx
src/components/Settings/: SettingsTab.tsx
src/components/StudyMode/: StudyModeTab.tsx
src/components/Units/: UnitsTab.tsx
src/lib/: api.ts
src/store/: index.ts
src/types/: index.ts
