[package]
name = "moyu-words"
version = "0.1.0"
description = "A local desktop vocabulary app with a transparent always-on-top study overlay."
authors = ["you"]
edition = "2021"

[lib]
name = "moyu_words_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2", features = ["tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
